# CDVA

./: .autotools  .cproject  .project  AUTHORS  COPYING  NEWS  README  autogen.sh  build.sh  configure.ac
Doxygen/: UpdateCfg.bat  UpdateCfg.sh  createDoc.bat  createDoc.sh  doxygen.cfg  doxylinux.cfg
Matlab/: CSVReader.cpp  CSVReader.h  Ignore.GT.csv  Timing.GT.csv  cdva_compile.m  cdva_eval.m  cdva_eval_mex.cpp  cdva_eval_mex.m  computeTP.m  compute_mAP.m  compute_precision_at_r.m  compute_recall_at_N.m  compute_top_match.m  getJaccard.m  getNumericalReferences.m  getSection.m  getUnion.m  holdSomeOut.m  meanAveragePrecision.m  measureCDVA.m  organizeTrueTimes.m  printCDVAmeasures.m  readCDVA.m  read_table.m  retrievalPerformance.m  temporalLocalisation.m  writeCDVAmeasures.m
docs/: CDVA-build-run-instructions.odt
run/: concurrency.pl  run-pairwise-matching.pl  run-retrieval.pl  setenv.pl
src/: Buffer.cpp  Buffer.h  CdvaException.h  CdvaImpl.cpp  CdvaImpl.h  FileManager.cpp  FileManager.h  LogManager.cpp  LogManager.h  Makefile.am  cdva.cpp  cdva.h
test/: README.txt  md5sum.txt  run-memory-test.pl  run-speed-test.pl  setenv.pl  verify-md5sum.pl
